[package]
name = "rusty-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
parse_duration = "2.1.1"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
yaml-rust = "0.4.5"
